--- a/platformio.ini
+++ b/platformio.ini
@@ -8,20 +8,30 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:featheresp32]
+[env:esp32]
 platform = espressif32
-board = featheresp32
+board = az-delivery-devkit-v4
 framework = arduino
+monitor_speed = 9600
+board_build.filesystem = littlefs
 lib_deps = 
 	https://github.com/tzapu/WiFiManager.git
-	adafruit/Adafruit SSD1306@^2.5.7
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	ayushsharma82/AsyncElegantOTA@^2.2.5
+	https://github.com/plerup/espsoftwareserial.git
+	https://github.com/olliiiver/sml_parser.git
 
-[env:esp32doit-devkit-v1]
+[env:esp32_ota]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = az-delivery-devkit-v4
 framework = arduino
+extra_scripts = platformio_upload.py
+upload_protocol = custom
+upload_url = http://192.168.179.107/update
+board_build.filesystem = littlefs
 lib_deps = 
 	https://github.com/tzapu/WiFiManager.git
-	adafruit/Adafruit SSD1306@^2.5.7
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	ayushsharma82/AsyncElegantOTA@^2.2.5
+	https://github.com/plerup/espsoftwareserial.git
+	https://github.com/olliiiver/sml_parser.git
