--- a/platformio.ini
+++ b/platformio.ini
@@ -16,13 +16,13 @@ monitor_speed = 9600
 board_build.filesystem = littlefs
 lib_deps = 
 	https://github.com/tzapu/WiFiManager.git
-	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	ayushsharma82/AsyncElegantOTA@^2.2.5
-	https://github.com/plerup/espsoftwareserial.git
-	https://github.com/olliiiver/sml_parser.git
 	https://github.com/ayushsharma82/WebSerial.git
-	https://github.com/LibreSolar/sml-parser.git
+	https://github.com/plerup/espsoftwareserial.git
+	git+https://github.com/volkszaehler/libsml
 	https://github.com/jandelgado/jled.git
+	https://github.com/bblanchon/ArduinoJson.git
 
 [env:esp32_ota]
 platform = espressif32
@@ -34,10 +34,10 @@ upload_url = http://192.168.179.107/update
 board_build.filesystem = littlefs
 lib_deps = 
 	https://github.com/tzapu/WiFiManager.git
-	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	ayushsharma82/AsyncElegantOTA@^2.2.5
-	https://github.com/plerup/espsoftwareserial.git
-	https://github.com/olliiiver/sml_parser.git
 	https://github.com/ayushsharma82/WebSerial.git
-	https://github.com/LibreSolar/sml-parser.git
+	https://github.com/plerup/espsoftwareserial.git
+	git+https://github.com/volkszaehler/libsml
 	https://github.com/jandelgado/jled.git
+	https://github.com/bblanchon/ArduinoJson.git
