--- a/web/logme-web/package.json
+++ b/web/logme-web/package.json
@@ -6,22 +6,32 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json_server": "json-server --watch db.json"
   },
   "dependencies": {
     "@iconify-prerendered/vue-carbon": "^0.13.1665986828",
+    "apexcharts": "^3.36.3",
+    "chart.js": "^3.9.1",
     "flowbite": "^1.5.3",
+    "pinia": "^2.0.23",
     "prettier": "^2.7.1",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.6"
+    "vue-chartjs": "^4.1.2",
+    "vue-json-pretty": "^2.2.3",
+    "vue-json-viewer": "^3.0.4",
+    "vue-router": "^4.1.6",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.7.0",
+    "json-server": "^0.17.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
