--- a/web/logme-web/package.json
+++ b/web/logme-web/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^1.5.3",
     "pinia": "^2.0.23",
     "prettier": "^2.7.1",
+    "tw-elements": "*",
     "vue": "^3.2.41",
     "vue-chartjs": "^4.1.2",
     "vue-json-pretty": "^2.2.3",
