--- a/web/logme-web/package.json
+++ b/web/logme-web/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^3.36.3",
     "chart.js": "^3.9.1",
     "flowbite": "^1.5.3",
+    "flowbite-vue": "^0.0.6",
     "pinia": "^2.0.23",
     "prettier": "^2.7.1",
     "tw-elements": "*",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/compiler-sfc": "^3.2.31",
     "autoprefixer": "^10.4.13",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.27.0",
